--- a/src/main/resources/templates/admin/view_find_products.html
+++ b/src/main/resources/templates/admin/view_find_products.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>상품 상세 조회 - 관리자</title>
+  <title>상품 상세 조회</title>
   <style>
     body {
       background-color: #f8f9fa;
