--- a/src/main/resources/templates/admin/view_find_products.html
+++ b/src/main/resources/templates/admin/view_find_products.html
@@ -21,7 +21,7 @@
     .form-wrapper {
       width: 600px;
       margin: 50px auto 0 auto;
-      background-color: #eeeeee;
+      background-color: white;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       padding: 30px;
