[style] 사용자 UI 통일 (#77)
* :lipstick: style: 주문 화면 UI 개선

* :lipstick: style: 전체 주문 내역 UI 개선

* :lipstick: style: 주문 상세 조회 UI 개선

* :lipstick: style: 주문 수정 UI 개선

* :lipstick: style: 주문 상세조회 버튼 크기 조정

* :lipstick: style: 상품 상세조회 배경색 변경

* :lipstick: style: 상품 상세조회 타이틀 변경

* :lipstick: style: 주문 수정 카드 최대 크기 조정

* :lipstick: style: 상품 상세조회 배경색 수정

--- a/src/main/resources/templates/admin/view_find_products.html
+++ b/src/main/resources/templates/admin/view_find_products.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>상품 상세 조회 - 관리자</title>
+  <title>상품 상세 조회</title>
   <style>
     body {
       background-color: #f8f9fa;
@@ -39,7 +39,7 @@
 
     td {
       padding: 10px;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #ccc;
     }
 
     .value {
